# countdown-qml

./: CMakeLists.txt  TextModel.h  main.cpp  music.qrc
.github/workflows/: msys2.yml  ubuntu.yml
qml/: Countdown.qml  Main.qml
src/: CountDown.cpp  CountDown.h  MusicPlayer.cpp  MusicPlayer.h
